check-in Python3VIP

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,6 @@
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} 南京思凯网络 <a href="http://www.baiyueheiyu.com">白月黑羽</a> 版权所有 
     &nbsp;&nbsp;  
     <a href="http://www.miitbeian.gov.cn"> 苏ICP备19007094</a>   &nbsp;&nbsp;
-    <a href="http://www.python3.vip">Python3.vip</a>
-    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1750696907&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1750696907:52" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
+    <a href="http://www.python3.vip">Python3主站</a> - 
+    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1750696907&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1750696907:51" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
 </div>
