check-in python3vip

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} 南京思凯网络 <a href="http://www.baiyueheiyu.com">白月黑羽</a> 版权所有 
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} 南京思凯网络 版权所有 
     &nbsp;&nbsp;  
     <a href="http://www.miitbeian.gov.cn"> 苏ICP备19007094</a> &nbsp;&nbsp;
     <a href="http://www.python3.vip">白月黑羽主站</a> &nbsp;&nbsp; 
