--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,13 +5,15 @@
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
 <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?dbe4b81610105438254516b658833659";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?f3bf3a9c0d649df68ae2e5750bfc0bf3";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </script>
 
 <!-- automatically push web page to baidu -->
@@ -28,6 +30,7 @@
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(bp, s);
   })();
+  
   </script>
   
     
